# sys-tui

./: .env.local.example  .gitignore  Cargo.toml  README.md
mini-agent/: Cargo.toml
mini-agent/src/: api.rs  collector.rs  config.rs  main.rs  models.rs  ollama.rs  watcher.rs
pro-tui/: Cargo.toml
pro-tui/src/: app.rs  main.rs
pro-tui/src/app/: config.rs  net.rs  ui.rs
scripts/: run-mini-agent.sh  run-pro-tui.sh
